# macro-bank-stability-panel

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  Euro_B_stability_master.csv  Makefile  README.md  T1_FE_Specs_bank_z_score.csv  T1_FE_Specs_capital_adequacy_ratio_filled.csv  Tables-STATA-Results.do  Tables-STATA.do  Two-Way Fixed Effect.R  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  refresh.yml
Data/Processed/: T1_FE_Specs_npl_ratio_filled.csv
data/: Data_Directory.md  Euro_B_stability_master_.csv  Euro_B_stability_with_controls.csv
data/interim/: Euro_B_stability_enhanced.csv  Euro_B_stability_master_with_real_rate.csv  master_real_rate (1).csv  master_real_rate.csv  master_real_rate_cs.csv  real_rate_assembled.csv  short_nominal_ea20_annual.csv
docs/: data_dictionary.md  methodology.md
notebooks/: Figure4.py  Figure5.py
scripts/: System-GMM.R  Two-Way_Fixed_Effect.R
src/macrobank/: __init__.py  build_data.py  fe_models.py  make_figures.py
tests/: test_imports.py
